[package]
name = "tburn_chain_v4_0"
version = "4.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
sha3 = "0.10"
sha2 = "0.10"
blake3 = "1.5"
secp256k1 = "0.27"
parking_lot = "0.12"
hmac = "0.12"
flate2 = "1.0"
zstd = "0.13"
snap = "1.1"
rand = "0.8"
rocksdb = "0.21"
lazy_static = "1.4"
chrono = "0.4"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
proptest = "1.3"
criterion = "0.5"
